# ai-proxy

./: .env.example  .gitignore  CLI.md  Dockerfile  Makefile  README.md  cli.py  config.yaml  docker-compose.yml  lcp  pyproject.toml  requirements.txt  setup.py  test.py
admin-ui/: .gitignore  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
admin-ui/src/: router.js
admin-ui/src/views/: ChatPlayground.vue  CreateModel.vue  ModelDetail.vue  ModelList.vue
app/: __init__.py  config.py  database.py  graph.py  main.py
config/: custom_models.json
example_tools/: calculator.py  datetime_api_caller.py  location_api_caller.py  random_tools.py  text_analyzer.py  unit_converter.py  weather.py
knowledge_base/: company_info.txt  faq.txt  technical_docs.md
mock_api/: Dockerfile  app.py
scripts/: fix_tools.py  reset_and_import_tools.py
src/langchain_proxy/cli/: main.py
src/langchain_proxy/core/: graph.py
src/langchain_proxy/server/: config.py  main.py
src/server/: __init__.py
src/server/cli/: main.py
src/server/core/: graph.py
src/server/server/: config.py  database.py  main.py
tests/: README_tools.md  rag.py  test_model_resolution.py
tests/unit/: __init__.py  chat_with_rag.py  test_tools.py
web/: index.html  nginx.conf  package-lock.json  package.json  vite.config.js
web/src/: App.vue  main.js  store.js
web/src/api/: client.js
web/src/components/: Badge.vue  Breadcrumbs.vue  Button.vue  DataTable.vue  Modal.vue  index.js
web/src/router/: index.js
web/src/views/: Chat.vue  Dashboard.vue  EditModel.vue  KnowledgeBase.vue  KnowledgeBaseDetail.vue  Logs.vue  ModelDetail.vue  ModelList.vue  Models.vue  ToolDetail.vue  ToolLogs.vue  Tools.vue
